Fixed sidebar always active on mobile issue

--- a/components/Sidebar/index.module.scss
+++ b/components/Sidebar/index.module.scss
@@ -3,7 +3,7 @@
 }
 
 .navbarClose {
-	@apply fixed z-30 inset-y-0 left-0 w-64 transition duration-300 transform bg-purple-800 overflow-y-auto lg:translate-x-0 lg:static lg:inset-0 -translate-x-full ease-in;
+	@apply fixed hidden md:block z-30 inset-y-0 left-0 w-64 transition duration-300 transform bg-purple-800 overflow-y-auto lg:translate-x-0 lg:static lg:inset-0 -translate-x-full ease-in;
 }
 
 .navBanner {
